k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: assignment
---
apiVersion: v1
kind: Namespace
metadata:
  name: submission
---
apiVersion: v1
kind: Namespace
metadata:
  name: user-manager
---
apiVersion: v1
kind: Namespace
metadata:
  name: review
---
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq
