k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assignments-ingress
  namespace: assignment
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/assignments
            pathType: Prefix
            backend:
              service:
                name: assignments-service
                port:
                  number: 5050
          - path: /api/v1/health
            pathType: Prefix
            backend:
              service:
                name: assignments-service
                port:
                  number: 5050
